--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Привет, меня зовут <span class="text-color-main">Олег Щеголев</span>
           <br />
-          Я Frontend Developer.
+          Я Frontend Developer & ментор.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
