добавил разделы с информацией

--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,99 @@
     </section>
     <!-- /END About Section -->
 
+    <!-- **** Projects Section **** -->
+    <section id="projects">
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">Чем могу помочь</h2>
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  🔵 изучение Frontend технологий: верстка / JavaScript /
+                  TypeScript / Angular
+                </h3>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">🔵 помощь с резюме</h3>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  🔵 подготовка к собеседованию
+                </h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  🔵 помощь / консультация по личным или рабочим проектам
+                </h3>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+        </div>
+      </div>
+    </section>
+    <!-- /END Projects Section -->
+
+    <!-- **** Projects Section **** -->
+    <section id="services">
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">Услуги</h2>
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  🔵 первый созвон (~30 минут) — бесплатный. Мы обсудим все
+                  детали, текущие проблемы и&nbsp;способы их решения, а также
+                  выясним, как я могу помочь
+                </h3>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-12 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  🔵 последующие созвоны — 1500 руб/час, независимо от типа
+                  задачи
+                </h3>
+              </div>
+            </div>
+          </div>
+
+          <!-- /END Project -->
+        </div>
+      </div>
+    </section>
+    <!-- /END Projects Section -->
+
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
@@ -153,10 +246,10 @@
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
-        <a rel="noreferrer" href="#top" class="back-to-top">
+        <!-- <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-        </a>
-        <!-- <div class="social-links">
+        </a> -->
+        <div class="social-links">
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
@@ -166,13 +259,13 @@
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-        </div> -->
+        </div>
 
         <hr />
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2025
+          © 2025 ИП Щеголев Олег Алексеевич
           <!-- <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
             >Jacobo Martínez</a
           > -->
