добавил оферту и политику

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
     <!-- **** Projects Section **** -->
     <section id="services">
       <div class="container">
-        <div class="project-wrapper">
+        <div style="margin-bottom: 10rem" class="project-wrapper">
           <h2 class="section-title dark-blue-text">Услуги</h2>
 
           <!-- Notice: each .row is a project -->
@@ -249,7 +249,7 @@
         <!-- <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a> -->
-        <div class="social-links">
+        <!-- <div class="social-links">
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
@@ -259,17 +259,31 @@
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-        </div>
+        </div> -->
 
-        <hr />
+        <!-- <hr /> -->
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
-        <p class="footer__text">
-          © 2025 ИП Щеголев Олег Алексеевич
-          <!-- <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          > -->
-        </p>
+        <div class="footer__container">
+          <div>
+            <p class="footer__text">
+              © 2025 ИП Щеголев Олег Алексеевич
+              <!-- <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
+                 >Jacobo Martínez</a
+               > -->
+            </p>
+            <p class="footer__text">ОГРНИП: 324774600549783</p>
+          </div>
+
+          <div>
+            <a class="footer__text" href="oferta.html" target="_blank"
+              >Договор-оферта</a
+            >
+            <a class="footer__text" href="policy.html" target="_blank"
+              >Политика конфиденциальности</a
+            >
+          </div>
+        </div>
       </div>
     </footer>
     <!-- /END Footer Section -->
