добавил инфу в футер

--- a/src/index.html
+++ b/src/index.html
@@ -273,6 +273,10 @@
                > -->
             </p>
             <p class="footer__text">ОГРНИП: 324774600549783</p>
+            <p class="footer__text">ИНН: 503824222434</p>
+            <p class="footer__text">
+              Контакты: <a href="tel:+79067813898">+7(906)781 38 98</a>
+            </p>
           </div>
 
           <div>
